--- a/src/app/support-hub/views/billing/support-hub-billing.component.scss
+++ b/src/app/support-hub/views/billing/support-hub-billing.component.scss
@@ -27,7 +27,8 @@
 .sh-billing-tables-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 1.25rem;
+  gap: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 @media (max-width: 1024px) {
